--- a/main.css
+++ b/main.css
@@ -1,56 +1,89 @@
 @import url(https://fonts.googleapis.com/css?family=Rock+Salt);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 
 body {
-
+  font-family: 'Open Sans', light;
+  margin: 0;
+  width: 100%;
 }
-h1 {
-
-}
-h2 {
+h1, h2 {
   font-family: 'Rock Salt', cursive;
-  font-size: 1.5em;
   margin: 0;
 }
+h1 {
+  font-size: 2.75em;
+}
+h2 {
+  font-size: 1.5em;
+}
 img {
- 
+  border: 2px dashed #00aeef;
+  margin-right: 20px;
+  padding: 10px; 
+}
+input {
+  padding: 5px;
 }
 button {
-
+  border-radius: 5px;
+  margin: 5px;
+  padding: 5px 8px;
 }
-header {
- 
-}
-header ul {
-
+nav ul {
+  margin-bottom: 10px;
+  padding: 0;
 }
 nav ul li {
-
+  display: inline-block;
+  padding: 0 30px;
 }
-article ul li {
-
+nav ul li:first-child {
+  padding-left: 0;
 }
-section {
-
+.header {
+  background-color: #77ccee;
+  border-bottom: 1px solid #4267b1;
+  margin-bottom: 20px;
+  padding-top: 20px;
 }
-footer {
-
+.header h1 {
+  display: inline-block;
+  margin: 30px 0 0 0;
+  vertical-align: top;
 }
-
-.centered {
-
+.footer {
+  background-color: #ddd;
+  margin-top: 20px;
+  min-height: 200px;
+  padding-top: 20px;
 }
-.container {
-
+.content {
+  margin: 0 auto;
+  max-width: 1024px;
+  padding: 0 20px;
+  width: 100%;
 }
 .row {
-
+  margin-top: 20px;
 }
 .column {
-
+  display: inline-block;
+  margin-right: 20px;
+  vertical-align: top;
+  width: 30%;
 }
-.four {
-
+.column:last-child {
+  margin-right: 0;
 }
-.gutter {
-
+.note, .request {
+  min-height: 180px;
+  padding: 10px 20px;
+}
+.note {
+  background-color: #4267b1;
+  border: 1px solid transparent;
+  color: #fff;
+}
+.request {
+  border: 1px solid #ddd;
 }
