--- a/main.css
+++ b/main.css
@@ -1,45 +1,43 @@
 @import url(https://fonts.googleapis.com/css?family=Rock+Salt);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 
 body {
-
+  font-family: 'Open Sans', light;
+  margin: 0;
+  width: 100%;
 }
-h1 {
-
-}
-h2 {
+h1, h2 {
   font-family: 'Rock Salt', cursive;
-  font-size: 1.5em;
   margin: 0;
 }
 img {
- 
+
+}
+input {
+
 }
 button {
 
 }
-header {
- 
-}
-header ul {
+nav ul {
 
 }
 nav ul li {
 
 }
-article ul li {
+nav ul li:first-child {
 
 }
-section {
+.header {
 
 }
-footer {
+.header h1 {
 
 }
-
-.centered {
+.footer {
 
 }
-.container {
+.content {
 
 }
 .row {
@@ -48,9 +46,12 @@ footer {
 .column {
 
 }
-.four {
+.column:last-child {
 
 }
-.gutter {
+.note {
+
+}
+.request {
 
 }
